# maria-utils

./: README.md  pyproject.toml
dev/: csv2table_chains.py  csv2table_simple.py  data.csv  test.py  test_chains.py  test_chains_new_table.py  test_df.py
mariaio/: mymaria.py
src/mariaio/: __init__.py  csv2table_app.py  mymaria.py
