[project]
name = "maria-utils"
version = "0.1.0"
description = "Manages MariaDB authentication configuration, Loads data from CSV files"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
  {name = "Derek Boonstra", email = "derek.boonstra@proton.me"},
]

dependencies = [
    "mariadb>=1.1.12",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.38",
]

[project.urls]
Homepage = "https://github.com/dboonstra/maria-utils"
